--- a/notebooks/covid.ipynb
+++ b/notebooks/covid.ipynb
@@ -13,27 +13,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -47,7 +26,8 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
@@ -78,6 +58,7 @@
     "myurl = 'https://www.getthedata.com/downloads/cases_by_utla_2020-03-16.csv'\n",
     "\n",
     "savefilename = '200316.csv'\n",
+    "\n",
     "r = requests.get(myurl)\n",
     "print(r.status_code)\n",
     "file = open(savefilename, \"wb\")\n",
@@ -232,7 +213,7 @@
     "\n",
     "### We only downloaded the files to the end of March. If we wanted to go into April, the `date_stem` would need changing but also the the valur of `str(i)` for the first nine days would not have the required leading zero.\n",
     "\n",
-    "### We can resolve both of these problems at the same time datetime methods in pandas.\n"
+    "### We can resolve both of these problems at the same time using a datetime method in pandas.\n"
    ]
   },
   {
@@ -330,7 +311,223 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Once downloaded we can use Excel Data | Import from other sources | from folder  to combine the files into one."
+    "## Once downloaded we can use Excel Data | Import from other sources | from folder  to combine the files into one.\n",
+    "\n",
+    "\n",
+    "## Or we could use pandas to combine the files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Steps\n",
+    "\n",
+    "1. Geta list of the files in the folder\n",
+    "2. Use pandas to create a dataframe for each\n",
+    "3. Combine all of the dataframes\n",
+    "4. Write them out to a csv file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Get list of files\n",
+    "\n",
+    "myfolder = 'd:' + os.sep +'covid19'\n",
+    "\n",
+    "\n",
+    "files = os.listdir(myfolder)\n",
+    "\n",
+    "for f in files:\n",
+    "    print(f'{myfolder}{os.sep}{f}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### But if we use these in a call to read_csv, it will fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(files[0],encoding = \"utf-8\", delimiter = \",\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## We need filenames with the fullpath"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = myfolder + os.sep + files[0]\n",
+    "print(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Now try it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = myfolder + os.sep + files[0]\n",
+    "df = pd.read_csv(filename,encoding = \"utf-8\", delimiter = \",\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##  concatenate all into single pandas dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import first file to create a dataframe\n",
+    "\n",
+    "filename = myfolder + os.sep + files[0]\n",
+    "df = pd.read_csv(filename,encoding = \"utf-8\", delimiter = \",\")\n",
+    "\n",
+    "\n",
+    "# Then append all othe rest \n",
+    "#\n",
+    "for file in files[1:len(files)]:\n",
+    "    filename = myfolder + os.sep + file\n",
+    "    df_csv = pd.read_csv(filename, encoding = \"utf-8\", delimiter = \",\")\n",
+    "    df = df.append(df_csv)\n",
+    "    \n",
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The real problem is the lack of filename info \n",
+    "\n",
+    "### We can get the date from the filename\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files[0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## And we can create a new column in the data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Date'] = files[0][0:10]\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## So we end up with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import first file to create a dataframe\n",
+    "\n",
+    "filename = myfolder + os.sep + files[0]\n",
+    "df = pd.read_csv(filename,encoding = \"utf-8\", delimiter = \",\")\n",
+    "df['Date'] = files[0][0:10]\n",
+    "\n",
+    "# Then append all othe rest \n",
+    "#\n",
+    "for file in files[1:len(files)]:\n",
+    "    filename = myfolder + os.sep + file\n",
+    "    df_csv = pd.read_csv(filename, encoding = \"utf-8\", delimiter = \",\")\n",
+    "    df_csv['Date'] = file[0:10]\n",
+    "    df = df.append(df_csv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Finally we write it out to a csv file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('all_covid.csv', index = False)"
    ]
   },
   {
